# compression-lzw

./: .gitignore  CMakeLists.txt  README.md
compression-lzw/: CMakeLists.txt  compression-lzw.cpp  compression-lzw.h
compression-lzw/Archive/: Archiver.hpp
compression-lzw/DirectoryClasses/: Directory.cpp  Directory.hpp  FileBlob.cpp  FileBlob.hpp  iostreamdirectory.hpp
compression-lzw/Encoders/: Encoder.hpp
compression-lzw/Zippers/: SZipper.hpp  Zipper.hpp
